fix: dark mode link color in the details page

--- a/src/pages/Details/DetailsPage.css
+++ b/src/pages/Details/DetailsPage.css
@@ -1,3 +1,9 @@
+main.dark {
+  .details-container a {
+    color: #fac000;
+  }
+}
+
 .details-container {
   display: flex;
   flex-direction: column;
